registro de imagenes en supabase
